Fixed Layout shift culprites

--- a/portfolio.css
+++ b/portfolio.css
@@ -7,6 +7,7 @@ h2 {
 
 .portfolio-galleries-wrapper {
     display: grid;
+    min-height: 60svh;
     grid-template-columns: 1fr;
     gap: 16px;
     margin-bottom: 16px;
